streamer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-video-streamer-service
spec:
  selector:
    app: go-video-streamer
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
