ingress.yaml
  apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/use-regex: "true"
    name: example
    namespace: default 
  spec:
    rules:
      - host: streamer.mngaonkar.com 
        http:
          paths:
          - path: /
            backend:
              serviceName: go-video-streamer-service
              servicePort: 80
